I found out the problem with the background.  It wasn't the code but the print settings.  Text is still blurry but might not be the code.  Next will work on state.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -217,7 +217,7 @@
        size: A4;
     }
     
-    #resume-header, #button-group, #sub-header{
+    #resume-header, #button-group, #sub-header, #warning-text, #progress-bar{
         display: none !important;
     }
 
