--- a/src/Components/SkillSheet/skillsheet.css
+++ b/src/Components/SkillSheet/skillsheet.css
@@ -28,6 +28,15 @@
     padding: 0.25rem/* 4px */;
     border-bottom-width: 2px;
     height: 2rem;
+    word-break: break-all !important;
+}
+
+.project-name-cell{
+    display: grid;
+    padding: 0.25rem;
+    border-bottom-width: 2px;
+    height: 2rem;
+    word-break: break-all;
 }
 
 .medium-cell{
@@ -37,6 +46,16 @@
     border-bottom-width: 2px;
     font-size: 0.875rem/* 14px */;
     line-height: 1.25rem/* 20px */;
+    word-break: break-all;
+}
+
+.overview-point-cell{
+    display: grid;
+    padding: 0.25rem;
+    border-bottom-width: 2px;
+    font-size: 0.875rem/* 14px */;
+    line-height: 1.25rem/* 20px */;
+    word-break: break-all;
 }
 
 .mid-cell{
