--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -745,6 +745,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }
 
+.h-\[5\.5rem\] {
+  height: 5.5rem;
+}
+
 .h-40 {
   height: 10rem;
 }
