--- a/src/Components/SkillSheet/skillsheet.css
+++ b/src/Components/SkillSheet/skillsheet.css
@@ -1,5 +1,5 @@
 .page-section{
-    margin: 0 1rem 1rem 1rem;
+    margin: 0 .25rem 1rem .25rem;
     background-color: white;
     padding-bottom: 1.25rem;
     min-width: 610px;
