--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -574,6 +574,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: 2.5rem;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -845,10 +849,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[90\%\] {
   width: 90%;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
 }
 
 .w-48 {
