I added all the code for the language array to SSForm2State  and created the components for the LanguageList and SingleLanguage item.  I need to test it still and make adjustments.

--- a/src/Components/SkillSheet/skillsheet.css
+++ b/src/Components/SkillSheet/skillsheet.css
@@ -103,7 +103,7 @@
     html, body{
         margin: 0 !important;
         padding: 0 !important;
-        background-color: #fff;
+        /* background-color: #fff; */
         width: 210mm;
         height: 297mm;
     }
@@ -131,6 +131,8 @@
         margin: 0 !important;
         clear: both;
         page-break-inside: avoid !important;
+        opacity: 100%;
+        font-weight: 100;
     }
 
     .mini-table-td{
