--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -753,10 +753,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5.5rem;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .h-56 {
   height: 14rem;
 }
@@ -1186,6 +1182,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-6 {
