I finished the functions for the Language list and add projects everything is working great except for the clearing of the language list when entering the project. The css for the lists in the form and appearance needs some work also.

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -753,6 +753,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5.5rem;
 }
 
+.h-\[10\.5rem\] {
+  height: 10.5rem;
+}
+
 .h-56 {
   height: 14rem;
 }
