--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -639,6 +639,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1.75rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
