I changed the images for the Popup.tsx element.  I somehow fixed the printing problem for the skillsheet.  I also added some ternary and css for the step 4 skillsheet to make it look better.  The only problem appearing now is the css for SSForm2. Next fix SSForm2 and then the TipBoxes.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -224,6 +224,7 @@
     #resume-page-1-bg, #resume-page-2-bg{
         margin: 0 !important;
         padding: 0 !important;
+        background-color: #fff;
     }
 
     #resume-page-1, #resume-page-2{
