--- a/src/Components/SkillSheet/skillsheet.css
+++ b/src/Components/SkillSheet/skillsheet.css
@@ -103,9 +103,9 @@
     html, body{
         margin: 0 !important;
         padding: 0 !important;
-        /* background-color: #fff; */
         width: 210mm;
         height: 297mm;
+        background-color: #fff;
     }
     
     @page { 
