--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -623,16 +623,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.25rem;
 }
 
+.ml-\[20rem\] {
+  margin-left: 20rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mb-7 {
@@ -653,10 +657,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.ml-\[20rem\] {
-  margin-left: 20rem;
 }
 
 .mt-0\.5 {
@@ -1083,6 +1083,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-purple {
   --tw-border-opacity: 1;
   border-color: rgb(135 78 210 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-gray {
@@ -1614,6 +1619,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 4rem;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:min-w-0 {
     min-width: 0px;
   }
@@ -1696,6 +1705,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .xl\:w-1\/2 {
     width: 50%;
+  }
+
+  .xl\:w-full {
+    width: 100%;
   }
 
   .xl\:grid-flow-row {
